     - Net::SSLeay::X509_set_serialNumber
     - Net::SSLeay::X509_set_subject_name
     - Net::SSLeay::X509_set_version
     - Net::SSLeay::X509_sign
     - Net::SSLeay::X509_subject_name_hash
     - Net::SSLeay::X509_verify
     - Net::SSLeay::d2i_X509_CRL_bio
     - Net::SSLeay::d2i_X509_REQ_bio
     - Net::SSLeay::d2i_X509_bio
     - Net::SSLeay::set_tlsext_host_name
     Fixed a problem with multiple Safefree of GLOBAL_openssl_mutex when run
     under apache2+mod_perl on recent Debain distros. Removed END and
     openssl_threads_cleanup() since they can be called during thread
     destruction, and not necessarily at process exit time.
     Added missing helper_script/regen_openssl_constants.pl to MANIFEST. Add
     MANIFEST to svn.
     Fixed reported errors about try to plan twice in 21_constants.t on some platforms.
     Removed MANIFEST from svn, improve possibility to use Module::Install in Net-SSleay 
     distribution in usual way. new target for make manifest
     Fix 2 issues with CTX_use_PKCS12_file
      1/ leaking memory - missing EVP_PKEY_free + X509_free
      2/ pkcs12 filesize limitation
     Fixed problems with regenerating scripts in Makefile.PL
     Added missing dependencies for SSLeay.o to Makefile.PL
     Added missing test files to svn
     Fixed calling convention for Net::SSLeay::get_shared_ciphers + test + doc update
     Added coding guidelines to SSLeay.xs
     Fix for serial number issue.
     Major patch to refactor callback code to make it more extensible and
     remove duplicate code. Thanks to kmx.
     Fixed a problem in  t/local/07_sslecho.t when running on 
     openssl-0.9.6
     Fixed pod parsing errors reported by Olivier Mengué
     Better prevention of leaking SVs in the new callback stuff
     Debug messages in SSLeay.xs can be enabled by: perl Makefile.PL DEFINE=-DSHOW_XS_DEBUG
     Fixing X509_NAME_oneline (calling OPENSSL_free at the right place)