@@ -7024,6 +7024,169 @@ Check openssl doc L<http://www.openssl.org/docs/crypto/BIO_f_ssl.html|http://www
 
 =back
 
+=head3 Low level API: NPN (next protocol negotiation) related functions
+
+Simple approach for using NPN support looks like this:
+
+ ### client side
+ use Net::SSLeay;
+ use IO::Socket::INET;
+ 
+ Net::SSLeay::initialize();
+ my $sock = IO::Socket::INET->new(PeerAddr=>'encrypted.google.com:443') or die;
+ my $ctx = Net::SSLeay::CTX_tlsv1_new() or die;
+ Net::SSLeay::CTX_set_options($ctx, &Net::SSLeay::OP_ALL);
+ Net::SSLeay::CTX_set_next_proto_select_cb($ctx, ['http1.1','spdy/2']);
+ my $ssl = Net::SSLeay::new($ctx) or die;
+ Net::SSLeay::set_fd($ssl, fileno($sock)) or die;
+ Net::SSLeay::connect($ssl);
+
+ warn "client:negotiated=",Net::SSLeay::P_next_proto_negotiated($ssl), "\n";
+ warn "client:last_status=", Net::SSLeay::P_next_proto_last_status($ssl), "\n";
+ 
+ ### server side 
+ use Net::SSLeay;
+ use IO::Socket::INET;
+ 
+ Net::SSLeay::initialize();
+ my $ctx = Net::SSLeay::CTX_tlsv1_new() or die;
+ Net::SSLeay::CTX_set_options($ctx, &Net::SSLeay::OP_ALL);
+ Net::SSLeay::set_cert_and_key($ctx, "t/data/cert.pem", "t/data/key.pem");
+ Net::SSLeay::CTX_set_next_protos_advertised_cb($ctx, ['spdy/2','http1.1']);
+ my $sock = IO::Socket::INET->new(LocalAddr=>'localhost', LocalPort=>5443, Proto=>'tcp', Listen=>20) or die;
+ 
+ while (1) {
+   my $ssl = Net::SSLeay::new($ctx);
+   warn("server:waiting for incomming connection...\n");
+   my $fd = $sock->accept();
+   Net::SSLeay::set_fd($ssl, $fd->fileno);
+   Net::SSLeay::accept($ssl);  
+   warn "server:negotiated=",Net::SSLeay::P_next_proto_negotiated($ssl),"\n";
+   my $got = Net::SSLeay::read($ssl);
+   Net::SSLeay::ssl_write_all($ssl, "length=".length($got));
+   Net::SSLeay::free($ssl);
+   $fd->close();
+ }
+ # check with: openssl s_client -connect localhost:5443 -nextprotoneg http/1.1,spdy/2
+
+Please note that the selection (negotiation) is performed by client side, the server side simply advertise the list of supported protocols.
+
+Advanced approach allows you to implement your own negotiation algorithm.
+
+ #see below documentation for:
+ Net::SSleay::CTX_set_next_proto_select_cb($ctx, $perl_callback_function, $callback_data);
+ Net::SSleay::CTX_set_next_protos_advertised_cb($ctx, $perl_callback_function, $callback_data);
+
+Detection of NPN support (works even in older Net::SSLeay versions):
+
+ use Net::SSLeay;
+ 
+ if (exists &Net::SSLeay::P_next_proto_negotiated) {
+   # do NPN stuff
+ }
+
+=over
+
+=item * CTX_set_next_proto_select_cb
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.45 and before; requires at least openssl-1.0.1
+
+B<NOTE:> You need CTX_set_next_proto_select_cb on B<client side> of SSL connection.
+
+Simple usage - in this case a "common" negotiation algoritm (as implemented by openssl's function SSL_select_next_proto) is used.
+
+ $rv = Net::SSleay::CTX_set_next_proto_select_cb($ctx, $arrayref);
+ # $ctx - value corresponding to openssl's SSL_CTX structure
+ # $arrayref - list of accepted protocols - e.g. ['http1.0', 'http1.1']
+ #
+ # returns: 0 on success, 1 on failure
+
+Advanced usage (you probably do not need this):
+ 
+ $rv = Net::SSleay::CTX_set_next_proto_select_cb($ctx, $perl_callback_function, $callback_data);
+ # $ctx - value corresponding to openssl's SSL_CTX structure
+ # $perl_callback_function - reference to perl function
+ # $callback_data - [optional] data to passed to callback function when invoked
+ #
+ # returns: 0 on success, 1 on failure
+ 
+ # where callback function looks like
+ sub npn_advertised_cb_invoke {
+   my ($ssl, $arrayref_proto_list_advertised_by_server, $callback_data) = @_;
+   my $status;
+   # ...
+   $status = 1;   #status can be:
+                  # 0 - OPENSSL_NPN_UNSUPPORTED
+                  # 1 - OPENSSL_NPN_NEGOTIATED
+                  # 2 - OPENSSL_NPN_NO_OVERLAP
+   return $status, ['http1.1','spdy/2']; # the callback has to return 2 values
+ }
+
+To undefine/clear this callback use:
+
+ Net::SSleay::CTX_set_next_proto_select_cb($ctx, undef);
+
+=item * CTX_set_next_protos_advertised_cb
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.45 and before; requires at least openssl-1.0.1
+
+B<NOTE:> You need CTX_set_next_proto_select_cb on B<server side> of SSL connection.
+
+Simple usage:
+
+ $rv = Net::SSleay::CTX_set_next_protos_advertised_cb($ctx, $arrayref);
+ # $ctx - value corresponding to openssl's SSL_CTX structure
+ # $arrayref - list of advertised protocols - e.g. ['http1.0', 'http1.1']
+ #
+ # returns: 0 on success, 1 on failure
+
+Advanced usage (you probably do not need this):
+ 
+ $rv = Net::SSleay::CTX_set_next_protos_advertised_cb($ctx, $perl_callback_function, $callback_data);
+ # $ctx - value corresponding to openssl's SSL_CTX structure
+ # $perl_callback_function - reference to perl function
+ # $callback_data - [optional] data to passed to callback function when invoked
+ #
+ # returns: 0 on success, 1 on failure
+ 
+ # where callback function looks like
+ sub npn_advertised_cb_invoke {
+   my ($ssl, $callback_data) = @_;
+   # ...
+   return ['http1.1','spdy/2']; # the callback has to return arrayref
+ }
+
+To undefine/clear this callback use:
+
+ Net::SSleay::CTX_set_next_protos_advertised_cb($ctx, undef);
+
+=item * P_next_proto_negotiated
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.45 and before; requires at least openssl-1.0.1
+
+Returns the name of negotiated protocol for given SSL connection $ssl.
+
+ $rv = Net::SSLeay::P_next_proto_negotiated($ssl)
+ # $ssl - value corresponding to openssl's SSL structure
+ #
+ # returns: (string) negotiated protocol name (or undef if no negotiation was done or failed with fatal error)
+
+=item * P_next_proto_last_status
+
+B<COMPATIBILITY:> not available in Net-SSLeay-1.45 and before; requires at least openssl-1.0.1
+
+Returns the result of the last negotiation for given SSL connection $ssl.
+
+ $rv = Net::SSLeay::P_next_proto_last_status($ssl)
+ # $ssl - value corresponding to openssl's SSL structure
+ #
+ # returns: (integer) negotiation status
+ #          0 - OPENSSL_NPN_UNSUPPORTED
+ #          1 - OPENSSL_NPN_NEGOTIATED
+ #          2 - OPENSSL_NPN_NO_OVERLAP
+
+=back
+
 =head3 Low level API: Other functions
 
 =over
